Scale contentRect by zoom

Reported size should be in CSS pixels, not physical, zoomed pixels.
Added a test case.

Also fixed existing iframe test. The existing test was incorrect.

Bug: 724971
Change-Id: I2f36429f08c6ab68b99d8754e9ddba9599c08348
Reviewed-on: https://chromium-review.googlesource.com/614108
Reviewed-by: Anton Vayvod <avayvod@chromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Commit-Queue: Aleks Totic <atotic@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496072}
Former-commit-id: 412b57a9cf766ec23db7256a9ca3d77e2a13276e